--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <title>fullstack 9.6</title>
   <script defer="defer" src="./js/bundle.js"></script><link href="style.css" rel="stylesheet"></head>
   <body>
+    <p>hello world</p>
   </body>
 </html>
