--- a/index.html
+++ b/index.html
@@ -7,8 +7,55 @@
     <title>fullstack 9.6</title>
   <script defer="defer" src="./js/bundle.js"></script><link href="style.css" rel="stylesheet"></head>
   <body>
-    <p>hello world
-  
-    </p>
+     <header>
+      <button class="menu-btn"> <img src="burger.svg" alt="menyushka"> </button>
+      <div class="v-line1"></div>
+      <div class="logo"> <img src="Group.svg" alt="logo"> </div>
+      <div class="header-box">
+        <button class="phone-btn"> <img src="call.svg" alt="mobila"> </button>
+        <button class="messenger-btn"> <img src="chat.svg" alt="smska"> </button>
+        <button class="profile-btn"> <img src="profile.svg" alt="chelik"> </button>
+        <div class="v-line2"></div>
+        <button class="settings-btn"> <img src="repair.svg" alt="istrumenty"> </button>
+        <button class="status-btn"> <img src="checkstatus.svg" alt="lupa"> </button>
+      </div>
+      </header>
+      <div class="title-wrapper">
+       <h1 class="title-vertical">Услуги и сервисы</h1>
+        <div class="header-buttons">
+          <span>Оставить заявку</span>
+          <button class="settings-btn2"><img src="repair.svg" alt="istrumenty"></button>
+          <span>Статус ремонта</span>
+          <button class="status-btn2"><img src="checkstatus.svg" alt="lupa"></button>
+        </div>
+      </div>
+      <div id="myMenu" class="side-menu">
+        <nav class="services">
+          <ul class="services-btn">
+            <li><a href="#">Ремонтируемые бренды</a></li>
+            <li><a href="#">Ремонтируемые устройства</a></li>
+            <li><a href="#">Дополнительные услуги</a></li>
+            <li><a href="#">Цены на услуги</a></li>
+            <li><a href="#">Специальные цены</a></li>
+            <li><a href="#">Адреса сервисных центров</a></li>
+            <li><a href="#">Отзывы</a></li>
+            <div class="slide slide-start"></div>
+          </ul>
+        </nav>
+        <div class="container">
+        <div class="text-container">
+            <input type="checkbox" id="toggle">
+            <div class="text" id="text">
+              <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+              <br>
+              <p>Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+            </div>
+            <label for="toggle" class="toggle-label"> <img src="expand.svg" alt="strelochki"> Читать далее </label>
+        </div>
+        <div class="picture">
+          <img src="_MG_3223.png" alt="fotka">
+        </div>
+        </div>
+      </div>
   </body>
 </html>
