--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,25 @@
   </head>
   <body>
      <header>
-      <button class="menu-btn"> <img src="burger.svg" alt="menyushka"> </button>
+      <button class="menu-btn"> <img src="img/burger.svg" alt="menyushka"> </button>
       <div class="v-line1"></div>
-      <div class="logo"> <img src="Group.svg" alt="logo"> </div>
+      <div class="logo"> <img src="img/Group.svg" alt="logo"> </div>
       <div class="header-box">
-        <button class="phone-btn"> <img src="call.svg" alt="mobila"> </button>
-        <button class="messenger-btn"> <img src="chat.svg" alt="smska"> </button>
-        <button class="profile-btn"> <img src="profile.svg" alt="chelik"> </button>
+        <button class="phone-btn"> <img src="img/call.svg" alt="mobila"> </button>
+        <button class="messenger-btn"> <img src="img/chat.svg" alt="smska"> </button>
+        <button class="profile-btn"> <img src="img/profile.svg" alt="chelik"> </button>
         <div class="v-line2"></div>
-        <button class="settings-btn"> <img src="repair.svg" alt="istrumenty"> </button>
-        <button class="status-btn"> <img src="checkstatus.svg" alt="lupa"> </button>
+        <button class="settings-btn"> <img src="img/repair.svg" alt="istrumenty"> </button>
+        <button class="status-btn"> <img src="img/checkstatus.svg" alt="lupa"> </button>
       </div>
       </header>
       <div class="title-wrapper">
        <h1 class="title-vertical">Услуги и сервисы</h1>
         <div class="header-buttons">
           <span>Оставить заявку</span>
-          <button class="settings-btn2"><img src="repair.svg" alt="istrumenty"></button>
+          <button class="settings-btn2"><img src="img/repair.svg" alt="istrumenty"></button>
           <span>Статус ремонта</span>
-          <button class="status-btn2"><img src="checkstatus.svg" alt="lupa"></button>
+          <button class="status-btn2"><img src="img/checkstatus.svg" alt="lupa"></button>
         </div>
       </div>
       <div id="myMenu" class="side-menu">
@@ -53,10 +53,10 @@
               <br>
               <p>Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
             </div>
-            <label for="toggle" class="toggle-label"> <img src="expand.svg" alt="strelochki"> Читать далее </label>
+            <label for="toggle" class="toggle-label"> <img src="img/expand.svg" alt="strelochki"> Читать далее </label>
         </div>
         <div class="picture">
-          <img src="_MG_3223.png" alt="fotka">
+          <img src="img/_MG_3223.png" alt="fotka">
         </div>
         </div>
       </div>
