--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,13 @@
       <div id="myMenu" class="side-menu">
         <nav class="services">
           <ul class="services-btn">
-            <li><a href="#">Ремонтируемые бренды</a></li>
-            <li><a href="#">Ремонтируемые устройства</a></li>
-            <li><a href="#">Дополнительные услуги</a></li>
-            <li><a href="#">Цены на услуги</a></li>
-            <li><a href="#">Специальные цены</a></li>
-            <li><a href="#">Адреса сервисных центров</a></li>
-            <li><a href="#">Отзывы</a></li>
+            <li><button>Ремонтируемые бренды</button></li>
+            <li><button>Ремонтируемые устройства</button></li>
+            <li><button>Дополнительные услуги</button></li>
+            <li><button>Цены на услуги</button></li>
+            <li><button>Специальные цены</button></li>
+            <li><button>Адреса сервисных центров</button></li>
+            <li><button>Отзывы</button></li>
             <div class="slide slide-start"></div>
           </ul>
         </nav>
