--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,15 @@
        <h1 class="page-title__heading">Услуги и сервисы</h1>
         <div class="page-title__actions">
           <span class="page-title__apply">Оставить заявку</span>
-          <button class="settings-btn2"><img src="img/repair.svg" alt="istrumenty"></button>
+          <button class="page-title__settings-btn"><img src="img/repair.svg" alt="istrumenty"></button>
           <span class="page-title__status">Статус ремонта</span>
-          <button class="status-btn2"><img src="img/checkstatus.svg" alt="lupa"></button>
+          <button class="page-title__status-btn"><img src="img/checkstatus.svg" alt="lupa"></button>
         </div>
       </div>
 
       <aside id="myMenu" class="side-menu">
         <nav class="side-menu__nav">
-          <ul class="side-menu__list">
+          <ul class="side-menu__list"> 
             <li class="side-menu__item"><button>Ремонтируемые бренды</button></li>
             <li class="side-menu__item"><button>Ремонтируемые устройства</button></li>
             <li class="side-menu__item"><button>Дополнительные услуги</button></li>
