--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,13 @@
       <aside id="myMenu" class="side-menu">
         <nav class="side-menu__nav">
           <ul class="side-menu__list"> 
-            <li class="side-menu__item"><button>Ремонтируемые бренды</button></li>
-            <li class="side-menu__item"><button>Ремонтируемые устройства</button></li>
-            <li class="side-menu__item"><button>Дополнительные услуги</button></li>
-            <li class="side-menu__item"><button>Цены на услуги</button></li>
-            <li class="side-menu__item"><button>Специальные цены</button></li>
-            <li class="side-menu__item"><button>Адреса сервисных центров</button></li>
-            <li class="side-menu__item"><button>Отзывы</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые бренды</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые устройства</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Дополнительные услуги</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Цены на услуги</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Адреса сервисных центров</button></li>
+            <li class="side-menu__item"><button class="side-menu__btn">Отзывы</button></li>
             <div class="side-menu__slide side-menu__slide--start"></div>
           </ul>
         </nav>
