--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>fullstack 9.6</title>
   </head>
   <body>
@@ -66,5 +67,119 @@
           </div>
         </main>
       </aside>
+        <nav class="servis-pc">
+        <h2>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
+        <div class="servis">
+            <button class="servis-btn">
+                <img src="Bitmap.png" alt="Lenovo" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-2.png" alt="SAMSUNG" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-4.png" alt="Apple" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-6.png" alt="ViewSonic" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-1.png" alt="BOSCH" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-3.png" alt="hp" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-5.png" alt="acer" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="servis-btn">
+                <img src="Bitmap-7.png" alt="SONY" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            
+                <button class="servis-btn">
+                    <img src="Bitmap.png" alt="Lenovo" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-2.png" alt="SAMSUNG" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-4.png" alt="Apple" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-6.png" alt="ViewSonic" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-1.png" alt="BOSCH" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-3.png" alt="hp" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-5.png" alt="acer" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+                <button class="servis-btn">
+                    <img src="Bitmap-7.png" alt="SONY" class="decor"/> 
+                    <img src="go.svg" alt="knopka" class="icon"/>
+                </button>
+        </div> 
+        <button id="toggleBtn" class="toggle-btn">
+            <img src="expand.svg" alt="стрелка" class="arrow">
+            <span>Показать ещё</span>
+        </button>
+        </nav>
+        <div class="swiper mySwiper">
+        <h3>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h3>
+        <div class="swiper-wrapper">
+            <button class="swiper-slide">
+                <img src="Bitmap.png" alt="Lenovo" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-2.png" alt="SAMSUNG" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-4.png" alt="Apple" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-6.png" alt="ViewSonic" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-1.png" alt="BOSCH" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-3.png" alt="hp" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-5.png" alt="acer" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+            <button class="swiper-slide">
+                <img src="Bitmap-7.png" alt="SONY" class="decor"/> 
+                <img src="go.svg" alt="knopka" class="icon"/>
+            </button>
+        </div>
+        <div class="swiper-pagination"></div> 
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
