--- a/src/index.html
+++ b/src/index.html
@@ -9,65 +9,65 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>fullstack 9.6</title>
-  </head>
-  <body>
-     <header class="header">
-      <button class="header__menu-btn"> <img src="img/burger.svg" alt="менюшка"> </button>
-      <div class="header__v-line header__v-line--left"></div>
-      <div class="header__logo"> <img src="img/Group.svg" alt="logo"> </div>
+    </head>
+    <body>
+        <header class="header">
+            <button class="header__menu-btn"> <img src="img/burger.svg" alt="менюшка"> </button>
+            <div class="header__v-line header__v-line--left"></div>
+            <div class="header__logo"> <img src="img/Group.svg" alt="logo"> </div>
 
-      <div class="header__box">
-        <button class="header__phone-btn"> <img src="img/call.svg" alt="mobila"> </button>
-        <button class="header__messenger-btn"> <img src="img/chat.svg" alt="smska"> </button>
-        <button class="header__profile-btn"> <img src="img/profile.svg" alt="chelik"> </button>
-        <div class="header__v-line header__v-line--right"></div>
-        <button class="header__settings-btn"> <img src="img/repair.svg" alt="istrumenty"> </button>
-        <button class="header__status-btn"> <img src="img/checkstatus.svg" alt="lupa"> </button>
-      </div>
-      </header>
-
-      <div class="page-title">
-       <h1 class="page-title__heading">Услуги и сервисы</h1>
-        <div class="page-title__actions">
-          <span class="page-title__apply">Оставить заявку</span>
-          <button class="page-title__settings-btn"><img src="img/repair.svg" alt="istrumenty"></button>
-          <span class="page-title__status">Статус ремонта</span>
-          <button class="page-title__status-btn"><img src="img/checkstatus.svg" alt="lupa"></button>
-        </div>
-      </div>
-
-      <aside id="myMenu" class="side-menu">
-        <nav class="side-menu__nav">
-          <ul class="side-menu__list"> 
-            <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые бренды</button></li>
-            <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые устройства</button></li>
-            <li class="side-menu__item"><button class="side-menu__btn">Дополнительные услуги</button></li>
-            <li class="side-menu__item"><button class="side-menu__btn">Цены на услуги</button></li>
-            <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
-            <li class="side-menu__item"><button class="side-menu__btn">Адреса сервисных центров</button></li>
-            <li class="side-menu__item"><button class="side-menu__btn">Отзывы</button></li>
-            <div class="side-menu__slide side-menu__slide--start"></div>
-          </ul>
-        </nav>
-
-        <main class="content">
-          <div class="content__text-block">
-            <input type="checkbox" id="toggle" class="content__toggle">
-
-            <div class="content__text" id="text">
-              <p class="content__paragraph">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-              <p class="content__paragraph">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+            <div class="header__box">
+            <button class="header__phone-btn"> <img src="img/call.svg" alt="mobila"> </button>
+            <button class="header__messenger-btn"> <img src="img/chat.svg" alt="smska"> </button>
+            <button class="header__profile-btn"> <img src="img/profile.svg" alt="chelik"> </button>
+            <div class="header__v-line header__v-line--right"></div>
+            <button class="header__settings-btn"> <img src="img/repair.svg" alt="istrumenty"> </button>
+            <button class="header__status-btn"> <img src="img/checkstatus.svg" alt="lupa"> </button>
             </div>
+        </header>
 
-            <label for="toggle" class="content__toggle-label"> <img src="img/expand.svg" alt="strelochki"> Читать далее </label>
-          </div>
-        
-          <div class="content__picture">
-            <img src="img/_MG_3223.png" alt="fotka" class="content__img">
-          </div>
-        </main>
-      </aside>
-        <nav class="servis-pc">
+        <div class="page-title">
+        <h1 class="page-title__heading">Услуги и сервисы</h1>
+            <div class="page-title__actions">
+            <span class="page-title__apply">Оставить заявку</span>
+            <button class="page-title__settings-btn"><img src="img/repair.svg" alt="istrumenty"></button>
+            <span class="page-title__status">Статус ремонта</span>
+            <button class="page-title__status-btn"><img src="img/checkstatus.svg" alt="lupa"></button>
+            </div>
+        </div>
+
+        <aside id="myMenu" class="side-menu">
+            <nav class="side-menu__nav">
+                <ul class="side-menu__list"> 
+                    <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые бренды</button></li>
+                    <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые устройства</button></li>
+                    <li class="side-menu__item"><button class="side-menu__btn">Дополнительные услуги</button></li>
+                    <li class="side-menu__item"><button class="side-menu__btn">Цены на услуги</button></li>
+                    <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
+                    <li class="side-menu__item"><button class="side-menu__btn">Адреса сервисных центров</button></li>
+                    <li class="side-menu__item"><button class="side-menu__btn">Отзывы</button></li>
+                    <div class="side-menu__slide side-menu__slide--start"></div>
+                </ul>
+            </nav>
+
+            <main class="content">
+                <div class="content__text-block">
+                    <input type="checkbox" id="toggle" class="content__toggle">
+
+                    <div class="content__text" id="text">
+                    <p class="content__paragraph">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+                    <p class="content__paragraph">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+                    </div>
+
+                    <label for="toggle" class="content__toggle-label"> <img src="img/expand.svg" alt="strelochki"> Читать далее </label>
+                </div>
+            
+                <div class="content__picture">
+                <img src="img/_MG_3223.png" alt="fotka" class="content__img">
+                </div>
+            </main>
+        </aside>
+        <!-- <nav class="servis-pc">
         <h2>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
         <div class="servis">
             <button class="servis-btn">
@@ -178,7 +178,126 @@
             </button>
         </div>
         <div class="swiper-pagination"></div> 
-    </div>
+    </div> -->
+        <nav class="brands">
+            <h2 class="brands__title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
+
+            <div class="brands__list">
+                <button class="brands__item">
+                <img src="img/Bitmap.png" alt="Lenovo" class="brands__logo" />
+                <img src="go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-2.png" alt="SAMSUNG" class="brands__logo" />
+                <img src="go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-4.png" alt="Apple" class="brands__logo" />
+                <img src="go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-6.png" alt="ViewSonic" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-1.png" alt="BOSCH" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-3.png" alt="hp" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-5.png" alt="acer" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-7.png" alt="SONY" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+
+                <!-- повторный блок -->
+                <button class="brands__item">
+                <img src="img/Bitmap.png" alt="Lenovo" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-2.png" alt="SAMSUNG" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-4.png" alt="Apple" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-6.png" alt="ViewSonic" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-1.png" alt="BOSCH" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-3.png" alt="hp" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-5.png" alt="acer" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+                <button class="brands__item">
+                <img src="img/Bitmap-7.png" alt="SONY" class="brands__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands__icon" />
+                </button>
+            </div>
+
+            <button id="toggleBtn" class="brands__toggle">
+                <img src="img/expand.svg" alt="стрелка" class="brands__arrow" />
+                <span class="brands__toggle-text">Показать ещё</span>
+            </button>
+        </nav>
+
+        <div class="brands-slider swiper mySwiper">
+            <h3 class="brands-slider__title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h3>
+
+            <div class="brands-slider__wrapper swiper-wrapper">
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap.png" alt="Lenovo" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-2.png" alt="SAMSUNG" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-4.png" alt="Apple" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-6.png" alt="ViewSonic" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-1.png" alt="BOSCH" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-3.png" alt="hp" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-5.png" alt="acer" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+                <button class="brands-slider__slide swiper-slide">
+                <img src="img/Bitmap-7.png" alt="SONY" class="brands-slider__logo" />
+                <img src="img/go.svg" alt="кнопка" class="brands-slider__icon" />
+                </button>
+            </div>
+
+            <div class="brands-slider__pagination swiper-pagination"></div>
+        </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
