--- a/src/index.html
+++ b/src/index.html
@@ -446,7 +446,7 @@
                     <span class="card__title">Цена</span>
                     <span class="card__text">Бесплатно</span>
                     <span class="card__title">Срок</span>
-                    <span class="card__text">30–60 мин</span>
+                    <span class="card__text">30 мин</span>
                     <button class="card__btn btn-order">
                         <img src="img/Group 10.svg" alt="заказать">
                     </button>
@@ -456,11 +456,11 @@
                 <div class="swiper-slide services__card card">
                     <div class="card__content">
                     <span class="card__title">Ремонтные услуги</span>
-                    <span class="card__text">Диагностика ноутбука</span>
+                    <span class="card__text">Замена дисплея</span>
                     <span class="card__title">Цена</span>
-                    <span class="card__text">Бесплатно</span>
+                    <span class="card__text">1 000 ₽</span>
                     <span class="card__title">Срок</span>
-                    <span class="card__text">30–60 мин</span>
+                    <span class="card__text">30-120 мин</span>
                     <button class="card__btn btn-order">
                         <img src="img/Group 10.svg" alt="заказать">
                     </button>
@@ -470,11 +470,11 @@
                 <div class="swiper-slide services__card card">
                     <div class="card__content">
                     <span class="card__title">Ремонтные услуги</span>
-                    <span class="card__text">Диагностика ноутбука</span>
+                    <span class="card__text">Замена полифонического динамика</span>
                     <span class="card__title">Цена</span>
                     <span class="card__text">Бесплатно</span>
                     <span class="card__title">Срок</span>
-                    <span class="card__text">30–60 мин</span>
+                    <span class="card__text">30-120 мин</span>
                     <button class="card__btn btn-order">
                         <img src="img/Group 10.svg" alt="заказать">
                     </button>
@@ -482,17 +482,17 @@
                 </div><div class="swiper-slide services__card card">
                     <div class="card__content">
                     <span class="card__title">Ремонтные услуги</span>
-                    <span class="card__text">Диагностика ноутбука</span>
+                    <span class="card__text">Тестирование с выдачей технического заключения</span>
                     <span class="card__title">Цена</span>
                     <span class="card__text">Бесплатно</span>
                     <span class="card__title">Срок</span>
-                    <span class="card__text">30–60 мин</span>
+                    <span class="card__text">30-120 мин</span>
                     <button class="card__btn btn-order">
                         <img src="img/Group 10.svg" alt="заказать">
                     </button>
                     </div>
                 </div>
-                
+
                 </div>
 
                 <div class="swiper-pagination"></div>
