--- a/src/index.html
+++ b/src/index.html
@@ -320,26 +320,6 @@
                     <span class="devices__name">Ремонт мониторов</span>
                     <img src="img/go.svg" alt="кнопка" class="icon" />
                 </button>
-
-                <button class="devices__item">
-                    <span class="devices__name">Ремонт ноутбуков</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
-                </button>
-
-                <button class="devices__item">
-                    <span class="devices__name">Ремонт планшетов</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
-                </button>
-
-                <button class="devices__item">
-                    <span class="devices__name">Ремонт ПК</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
-                </button>
-
-                <button class="devices__item">
-                    <span class="devices__name">Ремонт мониторов</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
-                </button>
             </div>
 
             <button id="toggleDevices" class="toggle">
@@ -352,36 +332,36 @@
 
             <div class="devices-slider__wrapper swiper-wrapper">
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт ноутбуков</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт планшетов</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
-                </button>
-                    <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт ПК</span>
-                <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт мониторов</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт ноутбуков</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт планшетов</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт ПК</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices__name">Ремонт мониторов</span>
-                    <img src="img/go.svg" alt="кнопка" class="icon" />
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
+                </button>
+                <button class="devices-slider__slide swiper-slide">
+                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
             </div>
 
