--- a/src/index.html
+++ b/src/index.html
@@ -332,7 +332,15 @@
 
             <div class="devices-slider__wrapper swiper-wrapper">
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <span class="devices-slider__name">Ремонт ноутбуков</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
+                </button>
+                <button class="devices-slider__slide swiper-slide">
+                    <span class="devices-slider__name">Ремонт планшетов</span>
+                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
+                </button>
+                <button class="devices-slider__slide swiper-slide">
+                    <span class="devices-slider__name">Ремонт ПК</span>
                     <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
@@ -340,23 +348,15 @@
                     <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <span class="devices-slider__name">Ремонт ноутбуков</span>
                     <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <span class="devices-slider__name">Ремонт планшетов</span>
                     <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
-                    <span class="devices-slider__name">Ремонт мониторов</span>
-                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
-                </button>
-                <button class="devices-slider__slide swiper-slide">
-                    <span class="devices-slider__name">Ремонт мониторов</span>
-                    <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
-                </button>
-                <button class="devices-slider__slide swiper-slide">
-                    <span class="devices-slider__name">Ремонт мониторов</span>
+                    <span class="devices-slider__name">Ремонт ПК</span>
                     <img src="img/go.svg" alt="кнопка" class="devices-slider__icon" />
                 </button>
                 <button class="devices-slider__slide swiper-slide">
