--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,8 @@
                             <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые устройства</button></li>
                             <li class="side-menu__item"><button class="side-menu__btn">Дополнительные услуги</button></li>
                             <li class="side-menu__item"><button class="side-menu__btn">Цены на услуги</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
                             <li class="side-menu__item"><button class="side-menu__btn">Адреса сервисных центров</button></li>
+                            <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
                             <li class="side-menu__item"><button class="side-menu__btn">Отзывы</button></li>
                             <div class="side-menu__slide side-menu__slide--start"></div>
                         </ul>
@@ -203,7 +203,7 @@
                     </button>
                 </nav>
 
-                <div class="brands-slider swiper mySwiper">
+                <div class="brands-slider swiper myBrandsSwiper">
                     <h3 class="brands-slider__title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h3>
 
                     <div class="brands-slider__wrapper swiper-wrapper">
@@ -383,7 +383,7 @@
                 <section class="services">
                     <h3 class="services__title">ЦЕНЫ НА УСЛУГИ</h3>
 
-                    <div class="services__slider swiper mySwiper">
+                    <div class="services__slider swiper myServicesSwiper">
                         <div class="swiper-wrapper">
                         
                         <div class="swiper-slide services__card card">
