--- a/src/index.html
+++ b/src/index.html
@@ -95,16 +95,18 @@
 
                 <aside id="myMenu" class="side-menu">
                     <nav class="side-menu__nav">
-                        <ul class="side-menu__list"> 
-                            <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые бренды</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые устройства</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Дополнительные услуги</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Цены на услуги</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Адреса сервисных центров</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
-                            <li class="side-menu__item"><button class="side-menu__btn">Отзывы</button></li>
-                            <div class="side-menu__slide side-menu__slide--start"></div>
-                        </ul>
+                        <div class="side-menu__list-wrapper">
+                            <ul class="side-menu__list"> 
+                                <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые бренды</button></li>
+                                <li class="side-menu__item"><button class="side-menu__btn">Ремонтируемые устройства</button></li>
+                                <li class="side-menu__item"><button class="side-menu__btn">Дополнительные услуги</button></li>
+                                <li class="side-menu__item"><button class="side-menu__btn">Цены на услуги</button></li>
+                                <li class="side-menu__item"><button class="side-menu__btn">Адреса сервисных центров</button></li>
+                                <li class="side-menu__item"><button class="side-menu__btn">Специальные цены</button></li>
+                                <li class="side-menu__item"><button class="side-menu__btn">Отзывы</button></li>
+                                <div class="side-menu__slide side-menu__slide--start"></div>
+                            </ul>
+                        <div class="side-menu__list-wrapper"></div>
                     </nav>
 
                     <main class="content">
