--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                     
                         <div class="content__picture">
-                        <img src="img/_MG_3223.png" alt="fotka" class="content__img">
+                        <img src="img/MG_3223.png" alt="fotka" class="content__img">
                         </div>
                     </main>
                 </aside>
